@@ -22,3 +22,4 @@ Suggests:
     markdown,
     neuroblastoma
 VignetteBuilder: knitr
+RoxygenNote: 7.1.2
