@@ -1,7 +1,7 @@
 \name{binseg_interface}
 \alias{binseg_interface}
 \title{binseg interface}
-
+\description{Low-level interface to binary segmentation algorithm.}
 \usage{binseg_interface(data_vec, 
     weight_vec, kmax, 
     distribution_str, 
