@@ -1,7 +1,7 @@
 \name{get_distribution_names}
 \alias{get_distribution_names}
 \title{get distribution names}
-
+\description{Lookup the string values used to represent different distributions}
 \usage{get_distribution_names()}
 
 
